:lipstick: fix images width on mobile

--- a/App/Components/Article.scss
+++ b/App/Components/Article.scss
@@ -43,3 +43,9 @@ ul {
     text-align: center !important;
     margin-top: 25vh;
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto;
+}
